im only noticing this now...

--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -92,33 +92,33 @@ function MM_findObj(n, d) { //v4.01
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable --><!-- InstanceParam name="bgcolobg_color" type="color" value="#999999" -->
 </head>
-<body bgcolor="#999999" onload="MM_preloadImages('stuff/grafx/sitegrafx/maindesign/lookatu.gif','stuff/grafx/sitegrafx/maindesign/logo_f2.gif','stuff/grafx/sitegrafx/navbar/blog_02.gif','stuff/grafx/sitegrafx/navbar/bio_02.gif','stuff/grafx/sitegrafx/navbar/archive_02.gif','stuff/grafx/sitegrafx/navbar/art_02.gif','stuff/grafx/sitegrafx/navbar/char_02.gif','stuff/grafx/sitegrafx/navbar/appendix_02.gif','stuff/grafx/sitegrafx/navbar/video_02.gif')" topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0" marginheight="0" marginwidth="0" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#CC0000">
+<body bgcolor="#999999" onload="MM_preloadImages('/stuff/grafx/sitegrafx/maindesign/lookatu.gif','/stuff/grafx/sitegrafx/maindesign/logo_f2.gif','/stuff/grafx/sitegrafx/navbar/blog_02.gif','/stuff/grafx/sitegrafx/navbar/bio_02.gif','/stuff/grafx/sitegrafx/navbar/archive_02.gif','/stuff/grafx/sitegrafx/navbar/art_02.gif','/stuff/grafx/sitegrafx/navbar/char_02.gif','/stuff/grafx/sitegrafx/navbar/appendix_02.gif','/stuff/grafx/sitegrafx/navbar/video_02.gif')" topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0" marginheight="0" marginwidth="0" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#CC0000">
 <table width="580" border="0">
   <tr>
     <td width="142" align="left" valign="top">
 	  <table width="142" border="0" cellspacing="0">
         <tr>
-          <td width="142" align="center" valign="middle"><div align="center"><a href="/" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo1','','stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img src="stuff/grafx/sitegrafx/maindesign/logo.gif" name="logo1" width="142" height="229" border="0" id="logo1"></a></div></td>
+          <td width="142" align="center" valign="middle"><div align="center"><a href="/" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo1','','/stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img src="/stuff/grafx/sitegrafx/maindesign/logo.gif" name="logo1" width="142" height="229" border="0" id="logo1"></a></div></td>
         </tr>
         <tr>
           <td align="center" valign="middle"><table border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td width="142" align="left" valign="top"><a href="/art.html" target="_top" onMouseOver="MM_nbGroup('over','art','stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+              <td width="142" align="left" valign="top"><a href="/art.html" target="_top" onMouseOver="MM_nbGroup('over','art','/stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="/stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
             </tr>
             <tr>
-              <td valign="top" align="left"><a href="/video.html" target="_top" onMouseOver="MM_nbGroup('over','video','stuff/grafx/sitegrafx/navbar/video_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="video" src="stuff/grafx/sitegrafx/navbar/video_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+              <td valign="top" align="left"><a href="/video.html" target="_top" onMouseOver="MM_nbGroup('over','video','/stuff/grafx/sitegrafx/navbar/video_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="video" src="/stuff/grafx/sitegrafx/navbar/video_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
             </tr>
             <tr>
-              <td valign="top" align="left"><a href="/char.html" target="_top" onMouseOver="MM_nbGroup('over','chardata','stuff/grafx/sitegrafx/navbar/char_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="chardata" src="stuff/grafx/sitegrafx/navbar/char_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+              <td valign="top" align="left"><a href="/char.html" target="_top" onMouseOver="MM_nbGroup('over','chardata','/stuff/grafx/sitegrafx/navbar/char_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="chardata" src="/stuff/grafx/sitegrafx/navbar/char_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
             </tr>
-  <td valign="top" align="left"><a href="/blog/" target="_top" onMouseOver="MM_nbGroup('over','blog','stuff/grafx/sitegrafx/navbar/blog_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="blog" src="stuff/grafx/sitegrafx/navbar/blog_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  <td valign="top" align="left"><a href="/blog/" target="_top" onMouseOver="MM_nbGroup('over','blog','/stuff/grafx/sitegrafx/navbar/blog_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="blog" src="/stuff/grafx/sitegrafx/navbar/blog_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   </tr>
-  <td valign="top" align="left"><a href="/bio.html" target="_top" onMouseOver="MM_nbGroup('over','bio','stuff/grafx/sitegrafx/navbar/bio_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="bio" src="stuff/grafx/sitegrafx/navbar/bio_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  <td valign="top" align="left"><a href="/bio.html" target="_top" onMouseOver="MM_nbGroup('over','bio','/stuff/grafx/sitegrafx/navbar/bio_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="bio" src="/stuff/grafx/sitegrafx/navbar/bio_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   <tr>
-    <td valign="top" align="left"><a href="/archive/" target="_top" onMouseOver="MM_nbGroup('over','archive','stuff/grafx/sitegrafx/navbar/archive_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="archive" src="stuff/grafx/sitegrafx/navbar/archive_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+    <td valign="top" align="left"><a href="/archive/" target="_top" onMouseOver="MM_nbGroup('over','archive','/stuff/grafx/sitegrafx/navbar/archive_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="archive" src="/stuff/grafx/sitegrafx/navbar/archive_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   </tr>
   <tr>
-    <td valign="top" align="left"><a href="/appn.html" target="_top" onMouseOver="MM_nbGroup('over','appendix','stuff/grafx/sitegrafx/navbar/appendix_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="appendix" src="stuff/grafx/sitegrafx/navbar/appendix_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+    <td valign="top" align="left"><a href="/appn.html" target="_top" onMouseOver="MM_nbGroup('over','appendix','/stuff/grafx/sitegrafx/navbar/appendix_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="appendix" src="/stuff/grafx/sitegrafx/navbar/appendix_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   </tr>
           </table></td>
         </tr>
@@ -126,17 +126,18 @@ function MM_findObj(n, d) { //v4.01
           <td><table width="141" border="0" cellspacing="0">
             <tr>
               <td width="90" align="center" valign="middle"><a href="http://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-					title="DMCA.com Protection Status" class="dmca-badge" target="_blank" width="100%"><img src="http://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-						alt="DMCA.com Protection Status" width="100$"/></a></td>
-              <td width="51" align="right" valign="top"><img name="navbar_title" src="stuff/grafx/sitegrafx/maindesign/navbar_title.gif" width="51" height="21" border="0"></td>
+					title="DMCA.com Protection Status" class="dmca-badge" target="_blank"><img src="stuff/grafx/buttons/dmca-badge-w100-5x1-02.gif"
+						alt="DMCA.com Protection Status" width="96" height="16"/></a>
+                <script src="http://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></td>
+              <td width="51" align="right" valign="top"><img name="navbar_title" src="/stuff/grafx/sitegrafx/maindesign/navbar_title.gif" width="51" height="21" border="0"></td>
             </tr>
           </table></td>
         </tr>
         <tr>
           <td><p><font size="-3">Aleph's Website media and text contents copyright &copy; 2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. All rights reserved.</font></p>
-            <p><img src="stuff/grafx/buttons/viewdesktop_88x31.gif" width="88" height="31"><br>
-                <img src="stuff/grafx/buttons/mwm_dw_88x31.gif" width="88" height="31"><br>
-          <img src="stuff/grafx/buttons/mwm_fw_88x31.gif" width="88" height="31"></p></td>
+            <p><img src="/stuff/grafx/buttons/viewdesktop_88x31.gif" width="88" height="31"><br>
+                <img src="/stuff/grafx/buttons/mwm_dw_88x31.gif" width="88" height="31"><br>
+          <img src="/stuff/grafx/buttons/mwm_fw_88x31.gif" width="88" height="31"></p></td>
         </tr>
       </table>
 	</td>
@@ -144,10 +145,10 @@ function MM_findObj(n, d) { //v4.01
       <tr>
         <td><table width="438" border="0" cellspacing="0">
           <tr>
-            <td><img name="wordmark" src="stuff/grafx/sitegrafx/maindesign/wordmark.gif" width="301" height="80" border="0"></td>
+            <td><img name="wordmark" src="/stuff/grafx/sitegrafx/maindesign/wordmark.gif" width="301" height="80" border="0"></td>
           </tr>
           <tr>
-            <td><img name="shitspace" src="stuff/grafx/sitegrafx/maindesign/shitspace.gif" width="301" height="76" border="0"></td>
+            <td><img name="shitspace" src="/stuff/grafx/sitegrafx/maindesign/shitspace.gif" width="301" height="76" border="0"></td>
           </tr>
         </table></td>
       </tr>
@@ -212,6 +213,6 @@ function MM_findObj(n, d) { //v4.01
     </table></td>
   </tr>
 </table> 
-<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" class="hapellrollover" border="0" src="stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="112" height="126" align="right"></a>
+<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','/stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" class="hapellrollover" border="0" src="/stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="112" height="126" align="right"></a>
 </body>
 <!-- InstanceEnd --></html>
