--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -115,9 +115,24 @@ function MM_findObj(n, d) { //v4.01
           <td><table width="141" border="0" cellspacing="0">
             <tr>
               <td width="90" align="center" valign="middle"><a href="http://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-					title="DMCA.com Protection Status" class="dmca-badge" target="_blank"><img src="stuff/grafx/buttons/dmca-badge-w100-5x1-02.gif"
+					title="DMCA.com Protection Status" class="dmca-badge" id="dmca-badge" target="_blank"><img src="stuff/grafx/buttons/dmca-badge-w100-5x1-02.gif"
 						alt="DMCA.com Protection Status" width="96" height="16"/></a>
-                <script src="http://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></td>
+                <script type="text/javascript" language="javascript">
+				(function () {
+				   document.addEventListener("DOMContentLoaded", function () {
+					   var e = "dmca-badge";
+					   var t = "refurl";
+					   var n = document.querySelectorAll('a.'+e);
+					   if (n[0].getAttribute("href").indexOf("refurl") < 0) {
+						   for (var r = 0; r < n.length; r++) {
+							   var i = n[r];
+							   i.href = i.href + (i.href.indexOf("?") === -1 ? "?" : "&") + t + "=" + document.location
+						   }
+					   }
+				   }, false)
+				}
+				)() //and that, kids, is why copy and paste is your best friend!
+				</script></td>
               <td width="51" align="right" valign="top"><img name="navbar_title" src="/stuff/grafx/sitegrafx/maindesign/navbar_title.gif" width="51" height="21" border="0"></td>
             </tr>
           </table></td>
