--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -157,7 +157,11 @@ function MM_findObj(n, d) { //v4.01
         </table></td>
       </tr>
       <tr>
-        <td><!-- InstanceBeginEditable name="content" -->Text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text.<!-- InstanceEndEditable --></td>
+        <td><!-- InstanceBeginEditable name="content" -->
+          <h1>happy buy local day</h1>
+          <p>Specifically: It's the economic blackout! That means you have to buy local for your real necessities and you can't shop at major retailers for anything! That means no Best Buy, no Target, no this and that. Just go local.<br>
+            I think this would be a great opportunity for me to find amazing places that have good services, and as a big music fan, maybe I'll find something interesting.</p>
+          <!-- InstanceEndEditable --></td>
       </tr>
     </table></td>
   </tr>
