--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,22 +1,43 @@
-<!doctype html><html lang="en"><head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta charset="UTF-8" />
-<meta name="robots" content="index, follow" />
-<title>badbunsen</title>
-<meta itemprop="name" content="badbunsen" />
-<meta name="twitter:title" content="badbunsen" />
-<meta property="og:title" content="badbunsen" />
-<meta name="description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" /> 
-<meta itemprop="description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
-<meta name="twitter:description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
-<meta property="og:description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
-<meta name="keywords" content="badbunsen, hapell the eyeball, under construction, portfolio, art, cartoons, character design" />
-<meta name="author" content="BadBunsen (Aleph Diallo)" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta itemprop="image" content="https://badbunsen.com/redesign.png" />
-<meta name="twitter:image" content="https://badbunsen.com/redesign.png" />
-<meta property="og:image" content="https://badbunsen.com/redesign.png" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://badbunsen.com/" />
-<link rel="canonical" href="https://badbunsen.com"></head><body bgcolor="#000" text="#FFF" link="#FFF" vlink="#FFF" alink="#FFF">
-<center><img src="redesign.gif" alt="Hapell the Eyeball, a person with an eyeball for a head and braids, looking at a laptop and saying: A redesign?! Not again!" style="border: 10px outset red;"  /><img src="spunchbob.jpg" style="position: absolute; left: 0; bottom: 0; width: 20vw;" alt="Gangster Spongebob hustling"><br /><p><a href="archive/index.html" target="_blank">the badunsen archives can be found here</a><br /><a href="https://badbunsenagain.deviantart.com" target="_blank">badbunsen's DeviantArt</a><br /><a href="mailto:aleph@badbunsen.com" target="_blank">complain to badbunsen via aleph [at] badbunsen [dot com]</a></p></center></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="robots" content="index, follow" />
+    <title>badbunsen</title>
+    <meta itemprop="name" content="badbunsen" />
+    <meta name="twitter:title" content="badbunsen" />
+    <meta property="og:title" content="badbunsen" />
+    <meta name="description"
+        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+    <meta itemprop="description"
+        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+    <meta name="twitter:description"
+        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+    <meta property="og:description"
+        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+    <meta name="keywords"
+        content="badbunsen, hapell the eyeball, under construction, portfolio, art, cartoons, character design" />
+    <meta name="author" content="BadBunsen (Aleph Diallo)" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta itemprop="image" content="https://badbunsen.com/redesign.png" />
+    <meta name="twitter:image" content="https://badbunsen.com/redesign.png" />
+    <meta property="og:image" content="https://badbunsen.com/redesign.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://badbunsen.com/" />
+    <link rel="canonical" href="https://badbunsen.com">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
+</head>
+
+<body>
+    <picture class="bb_logo_wdmk" width="50%">
+        <source media="(prefers-color-scheme: dark)" srcset="img/logo/badbunsen/speech_white.svg" width="50%" />
+        <source media="(prefers-color-scheme: light)" srcset="img/logo/badbunsen/speech.svg" width="50%" /><img
+            src="img/logo/badbunsen/speech.svg" width="50%"
+            alt="speech bubble containing the words badbunsen dot com in lowercase" /></picture>
+    <div class="content"><img src="img/art/hapellsketch/hello_homepage.gif" alt="Hapell the Eyeball says hi!"></div>
+</body>
+
+</html>
