--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,22 +1,22 @@
 <!doctype html><html lang="en"><head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta charset="UTF-8" />
-<meta name="robots" content="index, follow" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8"/>
+<meta name="robots" content="index, follow"/>
 <title>badbunsen</title>
-<meta itemprop="name" content="badbunsen" />
-<meta name="twitter:title" content="badbunsen" />
-<meta property="og:title" content="badbunsen" />
-<meta name="description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" /> 
-<meta itemprop="description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
-<meta name="twitter:description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
-<meta property="og:description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
-<meta name="keywords" content="badbunsen, hapell the eyeball, under construction, portfolio, art, cartoons, character design" />
-<meta name="author" content="BadBunsen (Aleph Diallo)" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta itemprop="image" content="https://badbunsen.com/redesign.png" />
-<meta name="twitter:image" content="https://badbunsen.com/redesign.png" />
-<meta property="og:image" content="https://badbunsen.com/redesign.png" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://badbunsen.com/" />
+<meta itemprop="name" content="badbunsen"/>
+<meta name="twitter:title" content="badbunsen"/>
+<meta property="og:title" content="badbunsen"/>
+<meta name="description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!"/> 
+<meta itemprop="description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!"/>
+<meta name="twitter:description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!"/>
+<meta property="og:description" content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!"/>
+<meta name="keywords" content="badbunsen, hapell the eyeball, under construction, portfolio, art, cartoons, character design"/>
+<meta name="author" content="BadBunsen (Aleph Diallo)"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta itemprop="image" content="https://badbunsen.com/redesign.png"/>
+<meta name="twitter:image" content="https://badbunsen.com/redesign.png"/>
+<meta property="og:image" content="https://badbunsen.com/redesign.png"/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://badbunsen.com/"/>
 <link rel="canonical" href="https://badbunsen.com"></head><body bgcolor="#000" text="#FFF" link="#FFF" vlink="#FFF" alink="#FFF">
-<center><img src="redesign.gif" alt="Hapell the Eyeball, a person with an eyeball for a head and braids, looking at a laptop and saying: A redesign?! Not again!" style="border: 10px outset red;"  /><img src="spunchbob.jpg" style="position: absolute; left: 0; bottom: 0; width: 20vw;" alt="Gangster Spongebob hustling"><br /><p><a href="archive/index.html" target="_blank">the badunsen archives can be found here</a><br /><a href="https://badbunsenagain.deviantart.com" target="_blank">badbunsen's DeviantArt</a><br /><a href="mailto:aleph@badbunsen.com" target="_blank">complain to badbunsen via aleph [at] badbunsen [dot com]</a></p></center></body></html>
+<center><img src="redesign.gif" alt="Hapell the Eyeball, a person with an eyeball for a head and braids, looking at a laptop and saying: A redesign?! Not again!" style="border: 10px outset red;" /><img src="spunchbob.jpg" style="position: absolute; left: 0; bottom: 0; width: 20vw;" alt="Gangster Spongebob hustling"><br/><p><font size="+5"><a href="https://badbetabunsen.vercel.app/" target="_blank"><img src="BETA.gif" alt="BETA PAGE"></a></font><br></font><a href="archive/index.html" target="_blank">the badunsen archives can be found here</a><br/><a href="neocities/index.html" target="_blank">the neocities sites have been archived here</a><br/><a href="https://badbunsenagain.deviantart.com" target="_blank">badbunsen's DeviantArt</a><br/><a href="mailto:aleph@badbunsen.com" target="_blank">complain to badbunsen via aleph [at] badbunsen [dot com]</a></p></center></body></html>
