--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,13 +10,13 @@
     <meta name="twitter:title" content="badbunsen" />
     <meta property="og:title" content="badbunsen" />
     <meta name="description"
-        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+        content="Badbunsen's very own website, filled with art, animations, a blog and more! Come on in and check out what he has to offer." />
     <meta itemprop="description"
-        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+        content="Badbunsen's very own website, filled with art, animations, a blog and more! Come on in and check out what he has to offer." />
     <meta name="twitter:description"
-        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+        content="Badbunsen's very own website, filled with art, animations, a blog and more! Come on in and check out what he has to offer." />
     <meta property="og:description"
-        content="Badbunsen's very own website. Currently under construction, but there's an archive full of art, animations, and more in the meantime!" />
+        content="Badbunsen's very own website, filled with art, animations, a blog and more! Come on in and check out what he has to offer." />
     <meta name="keywords"
         content="badbunsen, hapell the eyeball, under construction, portfolio, art, cartoons, character design" />
     <meta name="author" content="BadBunsen (Aleph Diallo)" />
@@ -28,16 +28,34 @@
     <meta property="og:url" content="https://badbunsen.com/" />
     <link rel="canonical" href="https://badbunsen.com">
     <link rel="stylesheet" href="style.css">
+    <style>.hapellhi{text-align: center;}</style>
     <link rel="icon" href="favicon.ico">
 </head>
 
-<body>
+<body class="dark">
     <picture class="bb_logo_wdmk" width="50%">
-        <source media="(prefers-color-scheme: dark)" srcset="img/logo/badbunsen/speech_white.svg" width="50%" />
-        <source media="(prefers-color-scheme: light)" srcset="img/logo/badbunsen/speech.svg" width="50%" /><img
-            src="img/logo/badbunsen/speech.svg" width="50%"
+        <source media="(prefers-color-scheme: dark)" srcset="rsrc/img/logo/badbunsen/speech_white.svg" width="50%" />
+        <source media="(prefers-color-scheme: light)" srcset="rsrc/img/logo/badbunsen/speech.svg" width="50%" /><img
+            src="rsrc/img/logo/badbunsen/speech.svg" width="50%"
             alt="speech bubble containing the words badbunsen dot com in lowercase" /></picture>
-    <div class="content"><img src="img/art/hapellsketch/hello_homepage.gif" alt="Hapell the Eyeball says hi!"></div>
+    <div class="content">
+        <header>
+            <p class="hapellhi">
+                <img src="rsrc/img/art/hapellsketch/hello_homepage.gif" 
+                alt="Hapell the Eyeball says hi!"
+                class="pixelimg">
+            </p>
+        </header>
+        <nav class="bb_nav">
+            <img src="rsrc/img/html_tags/nav_starttag.svg" alt="&lt;nav&gt;" class="navtag"">
+            <img src="rsrc/img/buttons/navbar/about.gif" alt="About" width="49" height="49" class="pixelimg">
+            <img src="rsrc/img/buttons/navbar/art.gif" alt="Art" width="49" height="49" class="pixelimg">
+            <img src="rsrc/img/buttons/navbar/video.gif" alt="Video" width="49" height="49" class="pixelimg">
+            <img src="rsrc/img/buttons/navbar/char.gif" alt="Characters" width="49" height="49" class="pixelimg">
+            <img src="rsrc/img/buttons/navbar/deviantart.gif" alt="BadBunsenAgain on deviantart.com" width="49" height="49" class="pixelimg">
+            <img src="rsrc/img/html_tags/nav_endtag.svg" alt="&lt;/nav&gt;" class="navtag">
+        </nav>
+    </div>
 </body>
 
 </html>
