--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -26,10 +26,11 @@
     <meta property="og:image" content="https://badbunsen.com/redesign.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://badbunsen.com/" />
-    <link rel="canonical" href="https://badbunsen.com">
-    <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://badbunsen.com" />
+    <link rel="stylesheet" href="style.css" />
     <style>.hapellhi{text-align: center;}</style>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
+    <meta name="revised" content="2025/03/02" />
 </head>
 
 <body class="dark">
@@ -38,23 +39,24 @@
         <source media="(prefers-color-scheme: light)" srcset="rsrc/img/logo/badbunsen/speech.svg" width="50%" /><img
             src="rsrc/img/logo/badbunsen/speech.svg" width="50%"
             alt="speech bubble containing the words badbunsen dot com in lowercase" /></picture>
+
+    <nav class="bb_nav">
+        <img src="rsrc/img/emoticons/09_resident.svg" class="emoticon" alt="randomly picked emoticon navbut" id="bb_emoticon" width="50" />
+        <img src="rsrc/img/buttons/navbar/about.gif" alt="About" width="49" height="49" class="pixelimg navbut" />
+        <img src="rsrc/img/buttons/navbar/art.gif" alt="Art" width="49" height="49" class="pixelimg navbut" />
+        <img src="rsrc/img/buttons/navbar/video.gif" alt="Video" width="49" height="49" class="pixelimg navbut" />
+        <img src="rsrc/img/buttons/navbar/char.gif" alt="Characters" width="49" height="49" class="pixelimg navbut"/>
+        <img src="rsrc/img/buttons/navbar/deviantart.gif" alt="BadBunsenAgain on deviantart.com" width="49" height="49" class="pixelimg navbut" />
+    </nav>
+
     <div class="content">
         <header>
             <p class="hapellhi">
                 <img src="rsrc/img/art/hapellsketch/hello_homepage.gif" 
                 alt="Hapell the Eyeball says hi!"
-                class="pixelimg">
+                class="pixelimg" />
             </p>
         </header>
-        <nav class="bb_nav">
-            <img src="rsrc/img/html_tags/nav_starttag.svg" alt="&lt;nav&gt;" class="navtag"">
-            <img src="rsrc/img/buttons/navbar/about.gif" alt="About" width="49" height="49" class="pixelimg">
-            <img src="rsrc/img/buttons/navbar/art.gif" alt="Art" width="49" height="49" class="pixelimg">
-            <img src="rsrc/img/buttons/navbar/video.gif" alt="Video" width="49" height="49" class="pixelimg">
-            <img src="rsrc/img/buttons/navbar/char.gif" alt="Characters" width="49" height="49" class="pixelimg">
-            <img src="rsrc/img/buttons/navbar/deviantart.gif" alt="BadBunsenAgain on deviantart.com" width="49" height="49" class="pixelimg">
-            <img src="rsrc/img/html_tags/nav_endtag.svg" alt="&lt;/nav&gt;" class="navtag">
-        </nav>
     </div>
 </body>
 
