--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -19,4 +19,24 @@
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://badbunsen.com/"/>
 <link rel="canonical" href="https://badbunsen.com"></head><body bgcolor="#000" text="#FFF" link="#FFF" vlink="#FFF" alink="#FFF">
-<center><img src="redesign.gif" alt="Hapell the Eyeball, a person with an eyeball for a head and braids, looking at a laptop and saying: A redesign?! Not again!" style="border: 10px outset red;" /><img src="spunchbob.jpg" style="position: absolute; left: 0; bottom: 0; width: 20vw;" alt="Gangster Spongebob hustling"><br/><p><font size="+5"><a href="https://badbetabunsen.vercel.app/" target="_blank"><img src="BETA.gif" alt="BETA PAGE"></a></font><br></font><a href="archive/index.html" target="_blank">the badunsen archives can be found here</a><br/><a href="neocities/index.html" target="_blank">the neocities sites have been archived here</a><br/><a href="https://badbunsenagain.deviantart.com" target="_blank">badbunsen's DeviantArt</a><br/><a href="mailto:aleph@badbunsen.com" target="_blank">complain to badbunsen via aleph [at] badbunsen [dot com]</a></p></center></body></html>
+<center><img src="redesign.gif" alt="Hapell the Eyeball, a person with an eyeball for a head and braids, looking at a laptop and saying: A redesign?! Not again!" style="border: 10px outset red;" /><img src="spunchbob.jpg" style="position: absolute; left: 0; bottom: 0; width: 20vw;" alt="Gangster Spongebob hustling"><br/><p><font size="+5"><a href="https://badbetabunsen.vercel.app/" target="_blank"><img src="BETA.gif" alt="BETA PAGE"></a></font><br></font><a href="archive/index.html" target="_blank">the badunsen archives can be found here</a><br/><a href="neocities/index.html" target="_blank">the neocities sites have been archived here</a><br/><a href="https://badbunsenagain.deviantart.com" target="_blank">badbunsen's DeviantArt</a><br/><a href="mailto:aleph@badbunsen.com" target="_blank">complain to badbunsen via aleph [at] badbunsen [dot com]</a>
+    <br>
+    <a href="https:////www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120d.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"  alt="DMCA.com Protection Status" /></a>
+    <script>
+        (function () {
+        document.addEventListener("DOMContentLoaded", function () {
+        var e = "dmca-badge";
+        var t = "refurl";
+        var n = document.querySelectorAll('a.'+e);
+        if (n[0].getAttribute("href").indexOf("refurl") < 0) {
+            for (var r = 0; r < n.length; r++) {
+                var i = n[r];
+                i.href = i.href + (i.href.indexOf("?") === -1 ? "?" : "&") + t + "=" + document.location
+            }
+        }
+        }, false)
+        }
+        )()
+    </script>
+</p></center>
+</body></html>
