--- a/sitedir/neocities/index.html
+++ b/sitedir/neocities/index.html
@@ -24,5 +24,22 @@
 <li><a href="https://nduruoflawlweb.neocities.org">nduruoflawl</a> (<a href="https://web.archive.org/web/20230323154006/https://alephd.neocities.org/nol/">an archive of the reconstruction can be found here</a>)</li>
 <li><a href="http://web.archive.org/web/0/http://nuevouniverso.neocities.org/">nuevouniverso</a> (not fully archived)</li>
 <li><a href="http://web.archive.org/web/0/http://mindgame.neocities.org/">mindgamᵉ</a> (unfinished)</li>
+<a href="https:////www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120d.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"  alt="DMCA.com Protection Status" /></a>
+    <script>
+        (function () {
+        document.addEventListener("DOMContentLoaded", function () {
+        var e = "dmca-badge";
+        var t = "refurl";
+        var n = document.querySelectorAll('a.'+e);
+        if (n[0].getAttribute("href").indexOf("refurl") < 0) {
+            for (var r = 0; r < n.length; r++) {
+                var i = n[r];
+                i.href = i.href + (i.href.indexOf("?") === -1 ? "?" : "&") + t + "=" + document.location
+            }
+        }
+        }, false)
+        }
+        )()
+    </script>
 </body>
 </html>
