shit the artwork

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -31,28 +31,31 @@
     <style>.hapellhi{text-align: center;}</style>
     <link rel="icon" href="favicon.ico" />
     <meta name="revised" content="2025/03/02" />
+    <script src="stuff/js/core.js"></script>
 </head>
 
 <body class="dark">
     <picture class="bb_logo_wdmk" width="50%">
-        <source media="(prefers-color-scheme: dark)" srcset="rsrc/img/logo/badbunsen/speech_white.svg" width="50%" />
-        <source media="(prefers-color-scheme: light)" srcset="rsrc/img/logo/badbunsen/speech.svg" width="50%" /><img
-            src="rsrc/img/logo/badbunsen/speech.svg" width="50%"
+        <source media="(prefers-color-scheme: dark)" srcset="stuff/img/logo/badbunsen/speech_white.svg" width="50%" />
+        <source media="(prefers-color-scheme: light)" srcset="stuff/img/logo/badbunsen/speech.svg" width="50%" /><img
+            src="stuff/img/logo/badbunsen/speech.svg" width="50%"
             alt="speech bubble containing the words badbunsen dot com in lowercase" /></picture>
 
     <nav class="bb_nav">
-        <img src="rsrc/img/emoticons/09_resident.svg" class="emoticon" alt="randomly picked emoticon navbut" id="bb_emoticon" width="50" />
-        <img src="rsrc/img/buttons/navbar/about.gif" alt="About" width="49" height="49" class="pixelimg navbut" />
-        <img src="rsrc/img/buttons/navbar/art.gif" alt="Art" width="49" height="49" class="pixelimg navbut" />
-        <img src="rsrc/img/buttons/navbar/video.gif" alt="Video" width="49" height="49" class="pixelimg navbut" />
-        <img src="rsrc/img/buttons/navbar/char.gif" alt="Characters" width="49" height="49" class="pixelimg navbut"/>
-        <img src="rsrc/img/buttons/navbar/deviantart.gif" alt="BadBunsenAgain on deviantart.com" width="49" height="49" class="pixelimg navbut" />
+        <img src="stuff/img/emoticons/09_resident.svg" class="emoticon" alt="randomly picked emoticon navbut" id="bb_emoticon" width="50" />
+        <div class="bb_nav_butts">
+        <img src="stuff/img/buttons/navbar/about.gif" alt="About" width="49" height="49" class="pixelimg navbut" />
+        <img src="stuff/img/buttons/navbar/art.gif" alt="Art" width="49" height="49" class="pixelimg navbut" />
+        <img src="stuff/img/buttons/navbar/video.gif" alt="Video" width="49" height="49" class="pixelimg navbut" />
+        <img src="stuff/img/buttons/navbar/char.gif" alt="Characters" width="49" height="49" class="pixelimg navbut"/>
+        <img src="stuff/img/buttons/navbar/deviantart.gif" alt="BadBunsenAgain on deviantart.com" width="49" height="49" class="pixelimg navbut" />
+        </div>
     </nav>
 
     <div class="content">
         <header>
             <p class="hapellhi">
-                <img src="rsrc/img/art/hapellsketch/hello_homepage.gif" 
+                <img src="stuff/artwork/hapellsketch/hello_homepage.gif" 
                 alt="Hapell the Eyeball says hi!"
                 class="pixelimg" />
             </p>
